# docman

./: .gitignore  .rumdl.toml  CLAUDE.md  GOVERNANCE.md  README.md  manifest.yaml  mkdocs.yml  pyproject.toml
.claude/agents/: docman-reviewer.md
.claude/commands/: test.md
.github/workflows/: ci.yml
configs/mcp/: docman.yaml
configs/orchestrators/: doc_pipeline.yaml  doc_pipeline_local.yaml  doc_pipeline_smart.yaml
configs/workers/: doc_classifier.yaml  doc_extractor.yaml  doc_extractor_smart.yaml  doc_extractor_windows.yaml  doc_ingest.yaml  doc_query.yaml  doc_summarizer.yaml  doc_summarizer_local.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  docling-setup.md  index.md  setup-macos.md  setup-windows.md
docs/api/: backends.md  contracts.md  tools.md
scripts/: build-app.sh  dev-start.ps1  dev-start.sh
src/docman/: __init__.py  contracts.py
src/docman/backends/: __init__.py  docling_backend.py  duckdb_ingest.py  duckdb_query.py  markitdown_backend.py  smart_extractor.py
src/docman/tools/: __init__.py  duckdb_view.py  vector_search.py
tests/: test_contracts.py  test_docling_backend.py  test_docling_converter.py  test_duckdb_embedding.py  test_duckdb_ingest.py  test_duckdb_query.py  test_duckdb_view_tool.py  test_markitdown_backend.py  test_smart_extractor.py  test_vector_search.py
