[project]
name = "docman"
version = "0.1.0"
description = "Document processing pipeline — Loom framework test project"
requires-python = ">=3.11"
dependencies = [
    "loom[duckdb]",                # Loom framework + DuckDB contrib
    "docling>=2.0.0",              # Document extraction (PDF, DOCX, etc.)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["docman"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
